// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wonder-blocks-core example 1 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "backgroundColor": "plum",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 32,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <span
    className=""
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "fontFamily": "sans-serif",
        "fontSize": 24,
      }
    }
  >
    Hello, world!
  </span>
</div>
`;

exports[`wonder-blocks-core example 2 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    onClick={[Function]}
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    Click me!
  </div>
  <span
    aria-hidden="true"
    className=""
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
      }
    }
  >
    This text is hidden from screen readers.
  </span>
</div>
`;

exports[`wonder-blocks-core example 3 1`] = `
<input
  className=""
  placeholder="hello, world"
  style={
    Object {
      "backgroundColor": "pink",
      "fontSize": 30,
    }
  }
  type="text"
/>
`;

exports[`wonder-blocks-core example 4 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "background": "#21242c",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "alignItems": "center",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "row",
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "@media (min-width: 1168px)": Object {
              "margin": "0 auto",
            },
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "row",
            "margin": 0,
            "maxWidth": 1120,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "width": "100%",
            "zIndex": 0,
          }
        }
      >
        <div
          className=""
          style={
            Object {
              "MsFlexBasis": 24,
              "MsFlexPreferredSize": 24,
              "WebkitFlexBasis": 24,
              "alignItems": "stretch",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flexBasis": 24,
              "flexDirection": "column",
              "flexShrink": 0,
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "padding": 0,
              "position": "relative",
              "zIndex": 0,
            }
          }
        />
        <div
          className=""
          style={
            Object {
              "alignItems": "stretch",
              "background": "#ffb100",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flexDirection": "column",
              "flexGrow": 1,
              "height": 100,
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "padding": 5,
              "position": "relative",
              "zIndex": 0,
            }
          }
        >
          <span
            className=""
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
              }
            }
          >
            Layout Size: 
            large
             Total Columns:
             
            12
          </span>
        </div>
        <div
          className=""
          style={
            Object {
              "MsFlexBasis": 24,
              "MsFlexPreferredSize": 24,
              "WebkitFlexBasis": 24,
              "alignItems": "stretch",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flexBasis": 24,
              "flexDirection": "column",
              "flexShrink": 0,
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "padding": 0,
              "position": "relative",
              "zIndex": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
